# PointCloudProcessor

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  README.md
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.robotics-computer-42_525312/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.robotics-computer-42_525312/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.robotics-computer-42_525312/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
src/: CloudGrabber.cpp  CloudGrabber.h  PointCloudGrabber.cpp  PointCloudGrabber.cpp~
